--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,6 +319,7 @@ html{
     background-color: white;
     width: 245px;
     padding: 0.15px 16px;
+    height: 204px;
 }
 
 .place-info .country
@@ -335,7 +336,8 @@ html{
 
 .place-info .tiltle
 {
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
 .place-info .buy-ticket
@@ -345,18 +347,45 @@ html{
     margin-bottom: 16px;
     padding: 8px 16px;
     width: fit-content;
-    position: relative;
+    text-decoration: none;
+
 }
 
-.buy-ticket .clicked-buy-ticket
+.place-section .buy-ticket:hover
 {
-    position: absolute;
+    color: #000;
+    background-color: #ccc;
+}
+
+.modal
+{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal .modal-container
+{
     background-color: white;
+    width: 900px;
+    min-height: 200px;
 }
 
-.place-info .buy-ticket:hover
+.modal .modal-header
 {
-    
+    background-color:#009688 ;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: white;
 }
 
 #footer{
